<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <Button
        android:id="@+id/change_pfp_btn"
        android:layout_width="202dp"
        android:layout_height="57dp"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="272dp"
        android:text="@string/change_pfp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/change_username_btn"
        android:layout_width="202dp"
        android:layout_height="57dp"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="12dp"
        android:text="@string/change_username"
        app:layout_constraintBottom_toTopOf="@+id/change_password_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/change_password_btn"
        android:layout_width="202dp"
        android:layout_height="57dp"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="16dp"
        android:text="@string/change_password"
        app:layout_constraintBottom_toTopOf="@+id/change_pfp_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TextUsuari"
        android:layout_width="112dp"
        android:layout_height="33dp"
        android:layout_marginStart="148dp"
        android:layout_marginBottom="30dp"
        android:text="@string/user_normal.cat"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/change_username_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="175dp"
        android:layout_height="51dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="48dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>